# PhysEngine

./: .gitignore  CMakeLists.txt  Emscripten.cmake  README.md  deploy_web.py  dev_server.py  index.html  main.cpp  momentum_api.py  styles.css  verify_core.py
PhysEngine/: CMakeLists.txt  PhysEngine.cpp  PhysEngine.h
include/core/: Config.hpp  SimulationEngine.hpp
include/math/: Complex.hpp  Matrix.hpp  Vector2.hpp
include/physics/: ChaosEngine.hpp  ClassicalEngine.hpp  MomentumBridge.h  QuantumEngine.hpp  Task.hpp  ThermodynamicsEngine.hpp
momentum-ui/: package-lock.json  package.json
momentum-ui/src/: App.js  App.test.js  index.css
momentum-ui/src/components/: QuantumTask.js  TaskInput.js
momentum-ui/src/hooks/: useMomentum.js  usePhysicsWorker.js
momentum-ui/src/hooks/__mocks__/: usePhysicsWorker.js
momentum-ui/src/services/: EventBridge.js  PerformanceMonitor.js
momentum-ui/src/workers/: physicsWorker.js
scripts/: animate_chaos.py  batch_chaos.py  quantum_multiverse.py  quantum_observer.py  visualize_butterfly.py
src/components/: QuantumTask.js
src/physics/: MomentumBridge.cpp
tests/: PhysicsTests.cpp  QuantumTests.cpp  SerializationTests.cpp
validation/: test_bridge.py  validate_physics.py  validate_quantum.py  verify_core.py
